--- a/xCAT-genesis-builder/install
+++ b/xCAT-genesis-builder/install
@@ -623,4 +623,8 @@ dracut_install /lib/udev/rules.d/11-dm-lvm.rules
 dracut_install /lib/udev/rules.d/13-dm-disk.rules
 dracut_install /lib/udev/rules.d/69-dm-lvm-metad.rules
 dracut_install /lib/udev/rules.d/95-dm-notify.rules
+# The DB files for lspci
+dracut_install /usr/share/hwdata/pci.ids
+# The DB files for udevadm
+dracut_install /etc/udev/hwdb.bin
 dracut_install /lib64/libform.so.5 /lib64/libpanel.so.5 /lib64/libmenu.so.5 /lib64/libsysfs.so.2 /usr/sbin/iprconfig # iprconfig for IBM Power RAID configuration
