--- a/xCAT-probe/debian/changelog
+++ b/xCAT-probe/debian/changelog
@@ -1,5 +1,5 @@
-xcat-probe (2.7) maverick; urgency=low
+xcat-probe (2.12) xcat; urgency=low
 
   * initial build
 
- -- tonetto <tonetto@linux.vnet.ibm.com>  Thu, 22 Sep 2011 19:42:58 -0300
+ -- huweihua <huweihua@cn.ibm.com>  Fri, 1 Jul 2016 19:42:58 -0400
