xcatd systemd unit file
1, Using xcatctl to control the xcatd daemon, and the unit file just
leverage this routine.
2, xcatd reload action will create a new Process, the behaviour is not
supported in systemd fork mode
3, Modify the related spec/debian files for above changes; and it should
cover the upgrade case from no systemd unit version

--- a/xCAT-server/debian/install
+++ b/xCAT-server/debian/install
@@ -27,7 +27,8 @@ lib/xcat/dsh/Context/* opt/xcat/xdsh/Context
 lib/xcat/Confluent/* opt/xcat/lib/perl/Confluent/
 
 lib/xcat/shfunctions opt/xcat/lib
-etc/init.d/xcatd etc/init.d
+etc/init.d/xcatd opt/xcat/etc/init.d/
+etc/systemd/xcatd.service opt/xcat/etc/systemd/
 xCAT-wsapi/* opt/xcat/ws/
 
 LICENSE.html opt/xcat/share/doc/packages/xCAT-server
