Feature #2681, to add a script in xCAT-test to get the performance baseline for node range operation.

--- a/xCAT-test/debian/install
+++ b/xCAT-test/debian/install
@@ -1,4 +1,5 @@
 xcattest opt/xcat/bin
+bin/xcatperftest opt/xcat/bin
 share/man/man1/* opt/xcat/share/man/man1
 share/doc/man1/* opt/xcat/share/doc/man1
 autotest opt/xcat/share/xcat/tools
