Modify xcat-genesis-builder script for Fedora26 ppc64

--- a/xCAT-genesis-builder/install
+++ b/xCAT-genesis-builder/install
@@ -5,18 +5,16 @@ dracut_install netstat # broadcom update requires
 dracut_install uniq # mellanox update requires
 dracut_install grep ip hostname /usr/bin/awk egrep grep dirname expr
 dracut_install mount.nfs sshd vi reboot lspci parted screen mkfs mkfs.ext4 mkfs.xfs xfs_db #mkfs.btrfs removed
-dracut_install efibootmgr
 #dracut_install libvirtd /usr/share/libvirt/cpu_map.xml /usr/bin/qemu-img /usr/libexec/qemu-kvm
 dracut_install mkswap df brctl vconfig ifenslave ssh-keygen scp clear dhclient lldpad
-dracut_install lldptool /lib64/libnss_dns-2.12.so /lib64/libnss_dns.so.2
 dracut_install poweroff ntpq ntpd ntp-wait hwclock date /usr/share/terminfo/x/xterm /usr/share/terminfo/s/screen /etc/nsswitch.conf /etc/services
 dracut_install /sbin/rsyslogd /etc/protocols umount /bin/rpm /usr/lib/rpm/rpmrc
-dracut_install chmod /lib/libc.so.6 /lib/ld-linux.so.2 /lib/libdl.so.2 /lib/libm.so.6 /sbin/route /sbin/ifconfig /usr/bin/whoami /usr/bin/head /usr/bin/tail basename /etc/redhat-release ping tr lsusb /usr/share/hwdata/usb.ids #ibm fw wrapper requirements
-dracut_install dmidecode /usr/lib64/libstdc++.so.6 #uxspi prereqs, but will use dmidecode to improve decision on loading ipmi_si
-dracut_install dmidecode /usr/lib64/libstdc++.so.5 #broadcom firmware update links against old lib
-dracut_install /lib/libpthread.so.0 #32 bit lib because UXSPI will not ship a native 64 bit build
-dracut_install /lib/libncurses.so.5.7 /usr/lib/libstdc++.so.6.0.13 /lib/libgcc_s.so.1  /lib/libtinfo.so.5.7
-dracut_install /lib64/libldap-2.4.so.2 /lib64/liblber-2.4.so.2 /usr/lib64/libsasl2.so.2 #uxspi has incurred these...
+dracut_install chmod /sbin/route /sbin/ifconfig /usr/bin/whoami /usr/bin/head /usr/bin/tail basename /etc/redhat-release ping tr lsusb /usr/share/hwdata/usb.ids #ibm fw wrapper requirements
+dracut_install efibootmgr lldptool dmidecode #uxspi prereqs, but will use dmidecode to improve decision on loading ipmi_si
+#dracut_install dmidecode /usr/lib64/libstdc++.so.5 #broadcom firmware update links against old lib
+#dracut_install /lib/libpthread.so.0 #32 bit lib because UXSPI will not ship a native 64 bit build
+#dracut_install /lib/libncurses.so.5.7 /usr/lib/libstdc++.so.6.0.13 /lib/libgcc_s.so.1  /lib/libtinfo.so.5.7
+#dracut_install /lib64/libldap-2.4.so.2 /lib64/liblber-2.4.so.2 /usr/lib64/libsasl2.so.2 #uxspi has incurred these...
 dracut_install /usr/share/zoneinfo/posix/Zulu
 dracut_install /usr/share/zoneinfo/posix/GMT-0
 dracut_install /usr/share/zoneinfo/posix/Europe/Istanbul
@@ -594,7 +592,6 @@ inst_dir /var/lib/nfs/statd/sm
 inst_dir /var/lib/nfs/statd/sm.bak
 inst_dir /var/lib/nfs/rpc_pipefs/nfs
 inst "/bin/bash" "/bin/sh"
-inst "/lib64/libnss_dns-2.12.so"
 inst "/lib/terminfo/l/linux" "/lib/terminfo/l/linux"
 inst "/lib/terminfo/v/vt100" "/lib/terminfo/v/vt100"
 inst_hook cmdline 10 "$moddir/xcat-cmdline.sh" 
@@ -624,4 +621,4 @@ dracut_install /lib/udev/rules.d/95-dm-notify.rules
 dracut_install /usr/share/hwdata/pci.ids
 # The DB files for udevadm
 dracut_install /etc/udev/hwdb.bin
-dracut_install /lib64/libform.so.5 /lib64/libpanel.so.5 /lib64/libmenu.so.5 /lib64/libsysfs.so.2 /usr/sbin/iprconfig # iprconfig for IBM Power RAID configuration
+dracut_install /usr/sbin/iprconfig # iprconfig for IBM Power RAID configuration
